<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/idFeedbackContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/half_rounded_white_rectangle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/idCloseFeedbackFragment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_cancel_copy" />

        <TextView
            android:id="@+id/idTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:text="@string/rate_the_conversation"
            android:textColor="@color/km_black_color"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/idLinearLayoutRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="47dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/idRatingPoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/idButtonPoor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_sad_1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/idTextPoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/rating_poor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idRatingAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/idButtonAverage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_confused"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/idTextAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/rating_average" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idRatingGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp">

                <Button
                    android:id="@+id/idButtonGood"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_happy"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/idTextGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/rating_great" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/idEditTextFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_a_comment"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="8dp" />

        <Button
            android:id="@+id/idButtonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/submit_your_rating"
            android:textAllCaps="false"
            android:textColor="@color/km_white_color"
            android:visibility="gone" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
