...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alImageListContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alFormLayoutRecycler"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/km_rich_message_border" />

    <io.kommunicate.ui.conversation.richmessaging.views.KmFlowLayout
...
